# IndoorToolKit

./: README.md
IndoorPaperSim-master/: 2  KLFinal.txt  KL_numP.dem  KL_numP.txt  KL_obj.dem  KL_obj.txt  KL_queryW.dem  KL_queryW.txt  KL_range.dem  KL_range.txt  Makefile  PageAccess.eps  Particle.cc  Particle.h  ParticleFilter.cc  ParticleFilter.h  README.md  RTree.h  ShortestPath.cc  ShortestPath.h  agg.txt~  agg2.txt~  agg3  aggregateRaw.cc  aggregateRaw.h  antenna.cc  antenna.h  antennas.csv  bar.dem  conf.cc  conf.h  conn.csv  converter.cc  converter.h  curve.dem  curveQW.dem  curveknnobj.dem  edge.cc  edge.h  edges.csv  (+75 more)
IndoorPaperSim-master/atnFiles/: .genAtn.cc.swp  a.out  atn1.csv  atnGenerate.cc
IndoorPaperSim-master/results/: KL_obj.eps  KL_queryW.eps  KL_range.eps  kL_numP.eps  kNN_numP.eps  knn_k.eps  knn_obj.eps  knn_range.eps  numR_KL.eps  numR_top1.eps  top1_numP.eps  top1_obj.eps  top1_range.eps
IndoorPaperSim-master/wholehaleydata/: antennas.csv  curve.data  edges.csv  nodes.csv
IndoorQuery/: .gitignore  CMakeLists.txt
IndoorQuery/data/jiao/: hall.txt  rfid.txt  room.txt
IndoorQuery/data/my/: floorplan.dxf  hall.txt
IndoorQuery/data/realData/: record10.txt  record2.txt  record6.txt
IndoorQuery/src/: main.cpp  nearest_neighbor.cpp  particle.h  range_query.cpp  simulator.cpp  simulator.h  walkinggraph.cpp
IndoorQuery/test/: CMakeLists.txt
Kalman/QuerySimulation-master/: README.org
Kalman/QuerySimulation-master/realData/: record15.txt
Kalman/QuerySimulation-master/src/: CMakeCache.txt  cmake_install.cmake  nearest_neighbor.cpp  nearest_neighbor.h  particle.h  simulator.h  walkinggraph.cpp
Kalman/QuerySimulation-master/test/: test_simulation.cpp
KalmanFilter/QuerySimulation-master/realData/: record12.txt  record13.txt  record14.txt  record16.txt  record17.txt  record20.txt  record21.txt  record23.txt  record9.txt
KalmanFilter/QuerySimulation-master/src/: CMakeLists.txt  Makefile  global.h  particle.cpp  range_query.h  simulator.cpp
QuerySimulation-master/data/jiao/: edge.txt  floorplan.dxf  node.txt  rfid2.txt
QuerySimulation-master/data/my/: edge.txt  (+5 more)
QuerySimulation-master/realData/: record11.txt
QuerySimulation-master/src/: global.cpp  particle.cpp  simulator.cpp  simulator.h  walkinggraph.cpp  walkinggraph.h
(+24 files in other folders)
